--- a/index.html
+++ b/index.html
@@ -3,94 +3,73 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Unicorn Feed</title>
+  <title>MLB Teams</title>
 
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 20px;
       background: #f5f5f5;
+      color: #111;
     }
 
-    #unicorn-feed {
+    #teams-list {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 12px;
       margin-top: 20px;
+      padding: 0;
+      list-style: none;
     }
 
-    .unicorn-card {
+    .team-card {
       background: #ffffff;
       border-radius: 8px;
-      padding: 16px;
+      padding: 12px;
       border: 1px solid #ddd;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      text-align: center;
+      font-weight: 600;
     }
 
-    .unicorn-card h3 {
-      margin: 0 0 8px 0;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .unicorn-card .meta {
-      font-size: 14px;
-      opacity: 0.8;
-      margin-bottom: 6px;
-    }
-
-    .unicorn-card .context {
-      font-size: 14px;
-      margin-bottom: 8px;
-      line-height: 1.3;
-    }
-
-    .unicorn-card .value,
-    .unicorn-card .sample {
-      font-size: 13px;
-      font-weight: bold;
-      color: #333;
+    .team-card a {
+      color: inherit;
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
 
-  <h1>Unicorn Feed</h1>
-  <p>Automatically loads the 20 unicorn patterns from <code>/data/unicorns.json</code>.</p>
+  <h1>MLB Teams</h1>
+  <p>Links to all 30 teams.</p>
 
-  <div id="unicorn-feed"></div>
+  <ul id="teams-list"></ul>
 
   <script>
-    async function loadUnicorns() {
+    async function loadTeams() {
       try {
-        const res = await fetch("/data/unicorns.json");
+        const res = await fetch("/data/latest/teams.json");
         const data = await res.json();
-        return data;
+        return Array.isArray(data) ? data : [];
       } catch (err) {
-        console.error("Failed to load unicorns:", err);
+        console.error("Failed to load teams:", err);
         return [];
       }
     }
 
-    function renderUnicorns(unicorns) {
-      const container = document.getElementById("unicorn-feed");
+    function renderTeams(teams) {
+      const container = document.getElementById("teams-list");
       if (!container) return;
-
-      container.innerHTML = unicorns.map(u => `
-        <div class="unicorn-card">
-          <h3>${u.title}</h3>
-          <div class="meta">
-            <strong>${u.player}</strong> — ${u.team}
-          </div>
-          <div class="context">${u.context}</div>
-          <div class="value">Value: ${u.value}</div>
-          <div class="sample">Sample: ${u.sample}</div>
-        </div>
-      `).join("");
+      container.innerHTML = teams
+        .map((t) => {
+          const teamId = t.team_id;
+          const abbr = t.abbreviation || t.abbrev || teamId;
+          return `<li class="team-card"><a href="/teams/${teamId}/">${abbr}</a></li>`;
+        })
+        .join("");
     }
 
-    loadUnicorns().then(renderUnicorns);
+    loadTeams().then(renderTeams);
   </script>
 
 </body>
